--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "build": "^0.1.4",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.2"
   }
